fixed some spacing issues in top-row

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 
-@media screen and (max-width: 1040px) {
+@media screen and (max-width: 2000px) {
 #top-row {
     flex-direction: column;
     align-content: center;
